# branchy

./: .gitignore  Cargo.toml  DESIGN.md  README.md  package-lock.json  package.json
dnas/branchy/workdir/: dna.yaml
dnas/branchy/zomes/coordinator/branchy/: Cargo.toml
dnas/branchy/zomes/coordinator/branchy/src/: error.rs  lib.rs  tree.rs  unit.rs  utils.rs
dnas/branchy/zomes/integrity/branchy/: Cargo.toml
dnas/branchy/zomes/integrity/branchy/src/: lib.rs
tests/: package.json
tests/src/: async.test.ts  basic.test.ts  index.ts  profile.ts
ui/: index.html  package.json
ui/src/: branchy.service.ts  branchy.store.ts  holochain-app.ts  images.ts  index.ts  initSimple.ts  types.ts  util.ts  we.ts
ui/src/elements/: attachments-list.ts  branchy-agent-list.ts  branchy-confirm.ts  branchy-controller.ts  branchy-edit-agent-list.ts  branchy-my-profile-dialog.ts  branchy-settings.ts  branchy-tree.ts  branchy-unit-dialog-edit.ts  branchy-unit-dialog.ts  branchy-unit.ts  embeds-pane.ts
we_dev/: config.json  config.ts
workdir/: happ.yaml  web-happ.yaml
